Update docker build files
  - Add test code
  - Add some doc
  - Move common files to base context

--- a/docker/cellpose/Dockerfile
+++ b/docker/cellpose/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR $HOME
 ENV PATH="$PATH:$HOME/.local/bin/"
 
 COPY requirements.txt ./requirements.txt
+
 RUN pip install --no-cache-dir -r requirements.txt
 
 # pull model data
@@ -14,6 +15,7 @@ RUN python -c 'from cellpose import models; models.Cellpose("cyto3")'
 
 
 # copy rest of the code
+COPY --from=base . .
 COPY . .
 
 EXPOSE 50051
