Clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,15 @@ dist/
 target/
 .pytest_cache/**
 __pycache__/
+*.egg-info
 python/biopb/
-python/biopb.egg-info/
 python/LICENSE
 descriptor.pb
-*.pt
-*.pth
 .ipynb_checkpoints/
 build
 java/.vscode/settings.json
+**/biopb/
+*.pickle
+*.pkl
+*.pth
+*.pt
