--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,7 @@ more-itertools==10.8.0
 nh3==0.3.0
 numpy==1.23.0
 packaging==25.0
+opencv-python-headless==4.12.0.88
 pluggy==1.6.0
 pycparser==2.23
 Pygments==2.19.2
